--- a/Final/Ep 1-3.html
+++ b/Final/Ep 1-3.html
@@ -11,13 +11,16 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Ep 1-3" startnode="93" creator="Twine" creator-version="2.3.5" ifid="CBD3A64B-76BF-430C-B92D-F21ECE13C2B9" zoom="0.6" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
+<tw-storydata name="Ep 1-3" startnode="8" creator="Twine" creator-version="2.3.5" ifid="CBD3A64B-76BF-430C-B92D-F21ECE13C2B9" zoom="0.6" format="Harlowe" format-version="2.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css?family=Kalam&display=swap');
 
 tw-story {
   background-color: #fff6c9;
   font-family: 'Kalam', times;
 }
 
+tw-sidebar {
+    display: none;
+}
 
 img {
   border: 3px solid black;
@@ -223,9 +226,9 @@ width=&quot;70%&quot; height= &quot;auto&quot;&gt;
 (live: 1s)[(t8n:&quot;dissolve&quot;)[But I don&#39;t want to go downstairs. Never mind, I should go. But no, what if they ask something I don&#39;t understand and I embarrass myself?](stop:)]
 
 (live: 5s)[(t8n:&quot;dissolve&quot;)[I can hear people being seated now, and it sounds like someone is starting to put something on the table; I think they&#39;re plates. I have to make a decision now. Should I continue to [[hide inside my little cave]], or go down and [[face the conversations]] that I probably won&#39;t understand? Then I would have to laugh and nod as they talk. I don&#39;t know if I would be able to do that tonight.](stop:)]</tw-passagedata><tw-passagedata pid="8" name="hide inside my little cave" tags="" position="2575.3333333333335,1281" size="100,100">&lt;img src=&quot;./Images/EP1/legolas-thinkingaboutpast.png&quot;
-width=&quot;70%&quot; height= &quot;auto&quot;&gt;
+width=&quot;50%&quot; height= &quot;auto&quot;&gt;
 
-(live: 1s)[(t8n:&quot;dissolve&quot;)[The people I live with are indeed terrific people, but I&#39;m going to stay in my room for tonight.](stop:)]
+(live: 1s)[(t8n:&quot;dissolve&quot;)[The people I live with are indeed terrific, but I&#39;m going to stay in my room for tonight.](stop:)]
 
 (live: 4s)[(t8n:&quot;dissolve&quot;)[I can hear people having a good time downstairs. But sadly I couldn&#39;t be [[part of it-&gt;I&#39;m going to lay in my bed.]]. ](stop:)]</tw-passagedata><tw-passagedata pid="9" name="face the conversations" tags="" position="2357,1333" size="100,100">(live: 1s)[(t8n:&quot;dissolve&quot;)[
 [[I&#39;m going downstairs]]. I feel my heart throbbing harder after each step. There&#39;s no turning back, this is what I&#39;m doing.](stop:)]
@@ -259,7 +262,7 @@ width=&quot;30%&quot; height= &quot;auto&quot;&gt;
 
 (live: 1s)[(t8n:&quot;dissolve&quot;)[Just another day. Sometimes I wonder why I&#39;m [[here.]]] (stop:)]
 
-(live: 1s)[(t8n:&quot;dissolve&quot;)[Am I really sure I&#39;m going to have a better life here? So far, it hasn&#39;t seemed that way. If I haven&#39;t felt any form of excitement the first few months I&#39;ve been here, how am I going to feel about this place after years of living here and getting used it? With all the things I&#39;ve been through that could&#39;ve been avoided had I stayed in India, is my future going to be worth all the [[sacrifices?]]] (stop:)]
+(live: 1s)[(t8n:&quot;dissolve&quot;)[Am I really sure I&#39;m going to have a better life here? So far, it hasn&#39;t seemed that way. If I haven&#39;t felt any form of excitement the first few months I&#39;ve been here, how am I going to feel about this place after years of living here and getting used to it? With all the things I&#39;ve been through that could&#39;ve been avoided had I stayed in India, is my future going to be worth all the [[sacrifices?]]] (stop:)]
 
 {
 (track: &#39;bed&#39;, &#39;loop&#39;, false, &#39;play&#39;)
@@ -299,7 +302,7 @@ width=&quot;30%&quot; height= &quot;auto&quot;&gt;
 
 (live: 5s)[(t8n:&quot;dissolve&quot;)[Will life get ever better for me? There&#39;s no way I&#39;m going to last much longer if I go on like this.] (stop:)]
 
-(live: 8s)[(t8n:&quot;dissolve&quot;)[But I know I have to [[go -&gt;do]], my grades depend on going to class and completing assignments.] (stop:)]
+(live: 8s)[(t8n:&quot;dissolve&quot;)[But I know I have to [[go-&gt;do]], my grades depend on going to class and completing assignments.] (stop:)]
 
 {
 (track: &#39;hallway&#39;, &#39;loop&#39;, true, &#39;play&#39;)
@@ -410,7 +413,7 @@ I don&#39;t feel that sense of comfort and stability anymore.] (stop:)]
 
 (live: 9s)[(t8n:&quot;dissolve&quot;)[I might as well go through my [[studies -&gt;study]] and forget about everything else.] (stop:)]</tw-passagedata><tw-passagedata pid="25" name="do" tags="hall" position="2555,2814" size="100,100">(live: 1s)[(t8n:&quot;dissolve&quot;)[Fine. today is a new day where I can set new goals, be different and change my perspective.] (stop:)]
 
-(live: 4s)[(t8n:&quot;dissolve&quot;)[I&#39;ll go to lecture and hopefully that will be enough to give me motivation to grow out of my comfort zone. It won&#39;t get any better if I stay home.] (stop:)]
+(live: 4s)[(t8n:&quot;dissolve&quot;)[I&#39;ll go to lecture and hopefully that will be motivate me enough to grow out of my comfort zone. It won&#39;t get any better if I stay home.] (stop:)]
 
 (live: 7s)[(t8n:&quot;dissolve&quot;)[But I&#39;m getting a headache from thinking about all of this.] (stop:)]
 
